# wsl-dashboard

./: .gitignore  Cargo.toml  README.md  build.rs
.github/workflows/: release.yml
assets/i18n/: ar.toml  bn.toml  cs.toml  da.toml  de.toml  el.toml  en.toml  es.toml  fi.toml  fr.toml  he.toml  hi.toml  hu.toml  id.toml  is.toml  it.toml  ja.toml  ko.toml  nl.toml  no.toml  pt.toml  ru.toml  sk.toml  sl.toml  sv.toml  tr.toml  ur.toml  vi.toml  zh-CN.toml  zh-TW.toml
assets/logo/: icon.rc
manual/: README_ar.md  README_bn.md  README_cs.md  README_da.md  README_de.md  README_el.md  README_es.md  README_fi.md  README_fr.md  README_he.md  README_hi.md  README_hu.md  README_id.md  README_is.md  README_it.md  README_ja.md  README_ko.md  README_nl.md  README_no.md  README_pt.md  README_ru.md  README_sk.md  README_sl.md  README_sv.md  README_tr.md  README_ur.md  README_vi.md  README_zh_CN.md  README_zh_TW.md
src/: main.rs
src/app/: autostart.rs  constants.rs  mod.rs  startup.rs  state.rs  tasks.rs  updater.rs  window.rs
src/config/: instances.rs  migration.rs  mod.rs  models.rs
src/i18n/: mod.rs
src/ui/: app.slint  data.rs  mod.rs  theme.slint
src/ui/components/: common.slint  dialogs.slint  distro_card.slint  form_widgets.slint  modal_manager.slint  scrollbar.slint  sidebar.slint  task_status_toast.slint  title_bar.slint
src/ui/handlers/: common.rs  instance.rs  mod.rs  settings.rs  update.rs  (+1 more)
src/utils/: icon_mapper.rs  logging.rs  mod.rs  system.rs  time.rs
src/wsl/: command.rs  dashboard.rs  decoder.rs  executor.rs  mod.rs  models.rs  parser.rs
(+34 files in other folders)
